--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple library to help generate and parse json as per the JSON API Spec.",
   "main": "jsonapify.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/nodemon ./node_modules/.bin/mocha --reporter spec"
   },
   "keywords": [
     "json",
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "nodemon": "^1.9.2"
   }
 }
